<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/padding_normal">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/black"
        android:layout_margin="30dp"
        android:text="@string/text_title"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_name"
        android:layout_below="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tiet_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapCharacters"
            android:maxLength="22"
            android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ "
            android:singleLine="true"
            android:textColor="@color/black"
            android:hint="@string/textinputedittext_name" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_card_number"
        android:layout_below="@+id/til_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tiet_card_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="16"
            android:digits="1234567890"
            android:singleLine="true"
            android:textColor="@color/black"
            android:hint="@string/textinputedittext_card_number" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:id="@+id/ll_card_details"
        android:orientation="horizontal"
        android:layout_below="@id/til_card_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_cvv"
            android:layout_weight="0.33"
            android:layout_width="0dp"
            android:layout_height="wrap_content" >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tiet_cvv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapCharacters"
                android:maxLength="3"
                android:digits="1234567890"
                android:singleLine="true"
                android:imeOptions="actionNext"
                android:textColor="@color/black"
                android:hint="@string/textinputedittext_cvv" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_expiry_month"
            android:layout_weight="0.33"
            android:layout_width="0dp"
            android:layout_height="wrap_content" >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tiet_expiry_month"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapCharacters"
                android:maxLength="2"
                android:digits="1234567890"
                android:singleLine="true"
                android:textColor="@color/black"
                android:hint="@string/textinputedittext_expiry_month" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_expiry_year"
            android:layout_weight="0.33"
            android:layout_width="0dp"
            android:layout_height="wrap_content" >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tiet_expiry_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapCharacters"
                android:maxLength="4"
                android:digits="1234567890"
                android:singleLine="true"
                android:textColor="@color/black"
                android:hint="@string/textinputedittext_expiry_year" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <Button android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_below="@id/ll_card_details"
        android:textColor="@color/white"
        android:background="@color/colorAccent"
        android:text="@string/button_submit"/>

</RelativeLayout>
